# fm

./: .gitignore  AGENTS.md  README  README.md  index.html  package-lock.json  package.json  vite.config.js
.claude/: settings.local.json
scripts/: Create-TestDirectoryStructure.ps1
src/: App.vue  main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: context_menu.rs  core.rs  dir_size.rs  icons.rs  lib.rs  pinned_favorites.rs  sidebar.rs  storage.rs  thumbnails.rs  transfer.rs
src/components/: ActionToolbar.vue  AddressBar.vue  DetailsPane.vue  FileIcon.vue  MainContent.vue  Sidebar.vue  StatusBar.vue  Toolbar.vue  TransferBar.vue  TrashToolbar.vue  Untitled-1.yml  ViewOptionsDropdown.vue  WelcomePage.vue  WinControls.vue
src/lib/: appPreferences.js  contextMenu.js  contextResolver.js  iconCache.js  keybindings.js  preferencesStore.js  transfer.js  virtualPaths.js
