[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
tokio = { version = "1.38", features = ["rt-multi-thread", "macros", "sync", "time"] }
walkdir = "2.5"
notify = "6.1"
file_icon_provider = "1.0"
base64 = "0.22"
image = "0.25"
rayon = "1"
directories = "5.0"
sysinfo = "0.30"
whoami = "1.5"
opener = "0.7"
rusqlite = { version = "0.31", features = ["bundled"] }
trash = "5"
shellexpand = "3"
